--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-on sale
-
-TEL: 18918690343
-Emal: wangchaoqun1997@126.com
-
-$15000
+<embed width="800" height="600" src="UI设计作品集_史金风.pdf"> </embed> 
