--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<div class="profile-thumb" style="background: url(images/author.jpg);"></div>
+							<h1>史金风</h1>
+							<h3><span>UI设计开发</span></h3>
 							<p>
-								<ul class="fh5co-social-icons">
+						  <ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-								</ul>
+						  </ul>
 							</p>
 						</div>
 					</div>
@@ -95,12 +95,12 @@
 					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
 					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 					<p>
-						<ul class="fh5co-social-icons">
+				  <ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-						</ul>
+				  </ul>
 					</p>
 				</div>
 			</div>
