--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 			</div>
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 				<p>[1/2] 培训项目简单介绍</p>
-				<embed width="800" height="800" src="UI设计作品集_史金风.pdf"> </embed>
+				<embed width="100%" height="800" src="UI设计作品集_史金风.pdf"> </embed>
 			</div> 
 			 
 			<div class="row">
