--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 			</div> -->
 							<div >
 									<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-									<a href="allproject.html"><p >[1/2] UI设计作品集_史金风[点击查看大图版本]</p></a>
+									<a href="UI设计作品集_史金风.pdf"><p >[1/2] UI设计作品集_史金风[右击另存为下载pdf]</p></a>
 									</div>
 							</div>
 							<a href="allproject2.html" class="work" style="background-image: url(images/allproject/1.jpg);">
