--- a/project2.html
+++ b/project2.html
@@ -25,7 +25,7 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body  style="background: #999999">
 		
 	<div class="fh5co-loader"></div>
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
