--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">史金凤</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">131 2758 3951</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">627664377@qq.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.ignischain.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">中国.南京</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block"><a  href="tel:13127583951"> 131 2758 3951</a></span></li>
+						<li><span class="first-block">Email:</span><span class="second-block"><a  href="http://www.126.com"> 627664377@qq.com</a></span></li>
+						<li><span class="first-block">Website:</span><span class="second-block"><a  href="http://www.ignischain.com">www.ignischain.com</a></span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">中国-南京</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
@@ -621,6 +621,7 @@
 			</div>
 		</div>
 	</div>
+	<p class="text-center" ><a href="#a01" class="btn btn-default btn-lg text-center" >联系我</a></p>
 <!--
 	<div id="fh5co-consult">
 		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
@@ -666,7 +667,7 @@
 	</div>
 -->
 
-<p class="text-center" ><a href="#a01" class="btn btn-default btn-lg text-center" >联系我</a></p>
+
 	<div id="map" class="fh5co-map"></div>	
 </div>
 	
