--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/author.jpg);"></div>
-							<h1>史金风</h1>
+							<h1>史金凤</h1>
 							<h3><span>UI设计开发</span></h3>
 							<p>
 						  <!--<ul class="fh5co-social-icons">
@@ -483,19 +483,19 @@
 				<!--
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 				<a href="allproject.html"><p >[1/2] 培训项目简单介绍[点击查看大图版本]</p></a>
-					<embed  width="100%" height="800" src="UI设计作品集_史金风.pdf"></embed>
+					<embed  width="100%" height="800" src="UI设计作品集_史金凤.pdf"></embed>
 				
 			</div> -->
 							<div >
 									<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-									<a href="UI设计作品集_史金风.pdf"><p >[1/2] UI设计作品集_史金风[下载pdf]</p></a>
+									<a href="UI设计作品集_史金凤.pdf"><p >[1/2] UI设计作品集_史金凤[下载pdf]</p></a>
 									</div>
 							</div>
 							<a href="allproject2.html" class="work" style="background-image: url(images/allproject/1.jpg);">
 							
 								<div class="desc  text-center">
 								<h3>Project Name</h3>
-								<span>UI设计作品集_史金风[点击查看大图版本]</span>
+								<span>UI设计作品集_史金凤[点击查看大图版本]</span>
 								</div>
 							</a>
 							</div>
