--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
 							<div >
 							<a href="project1.html" class="work" style="background-image: url(images/p1/家居产品中心.jpg);">
 								<div class="desc  text-center">
-								<h3>Project Name</h3>
-								<span>家具网站改版[点击查看大图版本]</span>
+								<h3>家具网站改版</h3>
+								<span>查看大图</span>
 								</div>
 							</a>
 							</div>
@@ -637,8 +637,8 @@
 							<div >
 							<a href="project4.html" class="work" style="background-image: url(images/p4/first.jpg);">
 								<div class="desc  text-center">
-								<h3>Project Name</h3>
-								<span>音乐APP 设计[点击查看大图版本]</span>
+								<h3>音乐APP 设计</h3>
+								<span>查看大图</span>
 								</div>
 							</a>
 							</div>
@@ -667,8 +667,8 @@
 							<div >
 							<a href="project2.html" class="work" style="background-image: url(images/p2/图标界面.jpg);">
 								<div class="desc  text-center">
-								<h3>Project Name</h3>
-								<span>电商网站改版[点击查看大图版本]</span>
+								<h3>电商网站改版</h3>
+								<span>查看大图</span>
 								</div>
 							</a>
 							</div>
@@ -697,8 +697,8 @@
 							<div >
 							<a href="project2.html" class="work" style="background-image: url(images/p2/图标界面.jpg);">
 								<div class="desc  text-center">
-								<h3>Project Name</h3>
-								<span>手机主题壁纸设计[点击查看大图版本]</span>
+								<h3>手机主题壁纸设计</h3>
+								<span>查看大图</span>
 								</div>
 							</a>
 							</div>
@@ -727,8 +727,8 @@
 							<div >
 							<a href="http://www.mugeda.com/client/preview_css3.html?id=3abc0155" class="work" style="background-image: url(images/RIO.jpg);">
 								<div class="desc  text-center">
-								<h3>Project Name</h3>
-								<span>RIO鸡尾酒html5页面设计[点击查看大图版本]</span>
+								<h3>RIO鸡尾酒html5页面设计</h3>
+								<span>查看大图</span>
 								</div>
 							</a>
 							</div>
@@ -756,8 +756,8 @@
 							<div >
 							<a href="images/AE.gif" class="work" style="background-image: url(images/AE.gif);">
 								<div class="desc  text-center">
-								<h3>Project Name</h3>
-								<span>AE制作天气动态图[点击查看大图版本]</span>
+								<h3>AE制作天气动态图</h3>
+								<span>查看大图</span>
 								</div>
 							</a>
 							</div>
