--- a/project5.html
+++ b/project5.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>家具网站改版</title>
+	<title>电商网站改版</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="家具网站改版" />
+	<meta name="description" content="电商网站改版" />
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -25,16 +25,14 @@
 	<![endif]-->
 
 	</head>
-	<body  style="background: #999999">
+	<body>
 		
 	<div class="fh5co-loader"></div>
-	
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>家具网站改版</h3></div>
-				<embed width="100%" height="100%" src="images/p3/界面效果.jpg"> </embed>
-				<embed width="100%" height="100%" src="images/p1/家居首页.jpg"> </embed>
-				<embed width="100%" height="100%" src="images/p1/家居产品中心.jpg"> </embed>
-				<embed width="100%" height="100%" src="images/p1/家居关于我们.jpg"> </embed>
-			</div>
+				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>电商网站改版</h3></div>
+				<!--embed width="100%" height="100%" src="images/p4/登录页.jpg"> </embed-->
+				<h class="text-center">抱歉！上传还未完成</h>
+			</div> 	
+
 	</body>
 </html>
