--- a/project2.html
+++ b/project2.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>UI设计 史金凤简历</title>
+	<title>手机主题壁纸设计</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="UI设计 史金凤简历" />
+	<meta name="description" content="手机主题壁纸设计" />
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -29,22 +29,12 @@
 		
 	<div class="fh5co-loader"></div>
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>[1/4] 培训项目简单介绍</h3></div>
+				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>手机主题壁纸设计</h3></div>
 				<embed width="100%" height="100%" src="images/p2/图标界面.jpg"> </embed>
-			</div> 	
-	
-			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>[2/4] 培训项目简单介绍</h3></div>
 				<embed width="100%" height="100%" src="images/p2/图标2级界面.jpg"> </embed>
-			</div> 		
-		
-			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>[3/4] 培训项目简单介绍</h3></div>
 				<embed width="100%" height="100%" src="images/p2/图标锁屏界面.jpg"> </embed>
-			</div>
-			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<div class="timeline-heading text-center animate-box" style="background: #999999"><h3>[4/4] 培训项目简单介绍</h3></div>
 				<embed width="100%" height="100%" src="images/p2/适配端.jpg"> </embed>
-			</div>
+			</div> 	
+
 	</body>
 </html>
