--- a/allproject.html
+++ b/allproject.html
@@ -25,12 +25,30 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body style="background: #999999">
 		
-	<div class="fh5co-loader"></div>
+	<div class="fh5co-loader" style="background: #999999"></div>
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 				<div class="timeline-heading text-center animate-box" style="background: #999999"<h3> 培训项目简单介绍</h3></div>
-				<embed width="100%" height="20000" src="UI设计作品集_史金风.pdf"> </embed>
-			</div> 
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-1.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-2.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-3.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-4.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-5.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-6.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-7.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-8.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-9.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-10.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-12.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-12.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-13.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-14.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-15.jpg"> </embed>
+				<embed width="100%" height="100%" src="images/allproject1/ilovepdf_com-16.jpg"> </embed>			
+			
+			</div> 			
+
 	</body>
 </html>
