--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 									<h3 class="timeline-title">[1/6]  音乐APP 设计</h3>
 								</div>
 								<div class="timeline-body">
-									<p>音乐APP界面UI,根据思路及搜索资源,通过PS,AI,制作手机,PC,iPad,Apple Watch端UI界面</p>
+									<p>分析考虑此APP的目标用户群为当下青年主流,针对目标用户群,通过对竞品的分析确定界面风格,运用Sketch绘制出整套APP界面及PC,Ipad, Apple Watch端适配</p>
 								</div>
 							</div>
 						</li>	
@@ -158,7 +158,7 @@
 									<h3 class="timeline-title">[2/6]  家具网站改版</h3>
 								</div>
 								<div class="timeline-body">
-									<p>根据某家具网站,分析优缺点,通过PS,AI及分析的思路,将网站修改,以期达到更好的 UI 展示效果</p>
+									<p>根据某家具网站,分析优缺点,然后搜索相关资源,整理并通过PS,AI结合分析的思路,将网站重新排版修改,留下优点,重点修改缺点,以期达到更好的 UI 展示效果</p>
 								</div>							
 								
 							</div>
@@ -172,7 +172,7 @@
 									<h3 class="timeline-title">[3/6]  设计电商网站</h3>
 								</div>
 								<div class="timeline-body">
-									<p>确定产品方向,考虑产品目标及受众人群,给出确定的电商界面风格,通过PS绘制出整个电商的页面</p>
+									<p>以某葡萄酒产品为例,确定产品方向,分析并考虑产品目标及受众人群,得出确定的电商界面风格,然后搜索相关资源,整理并通过PS AI等软件绘制出整个电商的页面</p>
 								</div>
 							</div>
 						</li>	
@@ -289,7 +289,7 @@
 							<p></p>
 							<ul class="stuff">
 								<div class="progress-wrap">
-									<h3><span class="name-left">音乐APP界面UI,根据思路及搜索资源,通过PS,AI,制作手机,PC,iPad,Apple Watch端UI界面</span></h3>
+									<h3><span class="name-left">分析考虑此APP的目标用户群为当下青年主流,针对目标用户群,通过对竞品的分析确定界面风格,运用Sketch绘制出整套APP界面及PC,Ipad, Apple Watch端适配</span></h3>
 										<div class="progress">
 											<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:100%">
 											</div>
@@ -319,7 +319,7 @@
 							<ul class="stuff">
 							
 								<div class="progress-wrap">
-									<h3><span class="name-left">根据某家具网站,分析优缺点,通过PS,AI及分析的思路,将网站修改,以期达到更好的 UI 展示效果</span></h3>
+									<h3><span class="name-left">根据某家具网站,分析优缺点,然后搜索相关资源,整理并通过PS,AI结合分析的思路,将网站重新排版修改,留下优点,重点修改缺点,以期达到更好的 UI 展示效果</span></h3>
 										<div class="progress">
 											<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:100%">
 											</div>
@@ -350,7 +350,7 @@
 							<p></p>
 							<ul class="stuff">
 								<div class="progress-wrap">
-									<h3><span class="name-left">确定产品方向,考虑产品目标及受众人群,给出确定的电商界面风格,通过PS绘制出整个电商的页面</span></h3>
+									<h3><span class="name-left">以某葡萄酒产品为例,确定产品方向,分析并考虑产品目标及受众人群,得出确定的电商界面风格,然后搜索相关资源,整理并通过PS AI等软件绘制出整个电商的页面</span></h3>
 										<div class="progress">
 											<div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:100%">
 											</div>
