modfiy small error

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 </h3>
 								</div>
 								<div class="timeline-body">
-									<p>因公司主营建筑台面装饰材料，是中国华东去实体面材总代理。日常工作中需要设计各种型号 版式的石英石样块不干胶背贴。</p>
+									<p>因公司主营建筑台面装饰材料，是中国华东区实体面材总代理。日常工作中需要设计各种型号 版式的石英石样块不干胶背贴。</p>
 								</div>
 							</div>
 						</li>
@@ -757,7 +757,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center " >
-					<p>&copy; 2018  All Rights Reserved.</p>
+					<p>&copy; 2019  All Rights Reserved.</p>
 				</div>
 			</div>
 		</div>
